<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.varunest.moviememo.MainActivity" >

    <item
        android:id="@+id/backup"
        android:orderInCategory="98"
        android:title="@string/backup"
        app:showAsAction="never"
        />
    
    <item
        android:id="@+id/restore"
        android:orderInCategory="100"
        android:title="@string/restore"
        app:showAsAction="never"
        />
    
     <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"
        />
   
    <item android:id="@+id/search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_search_actionbar"
          app:showAsAction="always"
        />
    <item android:id="@+id/change_view"
          android:title="@string/view_type"
          app:showAsAction="always"
        />
    <item android:id="@+id/sort"
          android:title="@string/sort"
          android:icon="@drawable/sort"
          app:showAsAction="always"
        />
     

</menu>
